--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/dm-serif-display": "^5.2.5",
     "@fontsource/satisfy": "^5.2.5",
     "aos": "^2.3.4",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
