Actualización de las variables de entorno en los archivos env.example y env.local para la autenticación con Clerk y la configuración de WhatsApp. Se añaden nuevas variables relacionadas con la empresa y se mejora la estructura de los archivos de configuración.

--- a/env.example
+++ b/env.example
@@ -3,9 +3,9 @@ NEXT_PUBLIC_GRAPHQL_URL=http://69.62.89.201:8181/graphql
 NEXT_PUBLIC_REST_API_URL=http://69.62.89.201:8181/api
 NEXT_PUBLIC_CATALOGO_URL=http://69.62.89.201:8181/catalogo
 
-# Clerk - Autenticación (OBLIGATORIO para producción)
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-CLERK_SECRET_KEY=sk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Clerk - Autenticación (OBLIGATORIO)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bG92ZWQtc2F0eXItNjMuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_jmtSAQ1VGFXpM7hJRFHHC3USCbbwJQcyj6EyUt6RT4
 
 # Configuración de WhatsApp
 NEXT_PUBLIC_WHATSAPP_NUMBER=56912345678
