--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/check-env.js && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-env": "node scripts/check-env.js"
   },
   "dependencies": {
     "@clerk/localizations": "^3.16.5",
@@ -15,6 +16,7 @@
     "@fontsource/dm-serif-display": "^5.2.5",
     "@fontsource/satisfy": "^5.2.5",
     "aos": "^2.3.4",
+    "dotenv": "^17.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
