--- a/.env.docker.template
+++ b/.env.docker.template
@@ -17,10 +17,10 @@ CLERK_SECRET_KEY=sk_test_jmtSAQ1VGFXpM7hJRFHHC3USCbbwJQcyj6EyUt6RT4
 NEXT_PUBLIC_WHATSAPP_NUMBER=56912345678
 NEXT_PUBLIC_WHATSAPP_MESSAGE=Hola,%20me%20interesa%20conocer%20más%20sobre%20SkinsLabs
 
-# Configuración de la empresa - URL de producción VPS
+# Configuración de la empresa - URL de producción
 NEXT_PUBLIC_COMPANY_NAME=SkinsLabs
 NEXT_PUBLIC_COMPANY_DESCRIPTION=Asistentes Virtuales con IA para automatizar tu atención al cliente
-NEXT_PUBLIC_APP_URL=http://69.62.89.201:3002
+NEXT_PUBLIC_APP_URL=https://skinslabs.cl
 NEXT_PUBLIC_APP_NAME=SkinsLabs - Asistentes Virtuales IA
 
 # Analytics (opcional)
