Fix: Corregir URLs del backend para entorno Docker
- Actualizar variables de entorno para usar nombres de contenedor internos
- Modificar proxy de imágenes para usar REST_API_URL interno
- Corregir endpoint de subida de imágenes para Docker
- Agregar red externa skinslabs-back para conectividad con backend
- Usar http://skinslabs-backend:8080 para comunicación interna

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - NEXT_PUBLIC_APP_NAME=${NEXT_PUBLIC_APP_NAME:-SkinsLabs - Asistentes Virtuales IA}
     networks:
       - app_network
+      - skinslabs-back_skinslabs-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
       interval: 30s
@@ -47,3 +48,5 @@ services:
 networks:
   app_network:
     driver: bridge
+  skinslabs-back_skinslabs-network:
+    external: true
