--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,20 @@
-# Ignora archivos que no se necesitan en producción
+# Archivos de Node.js
 node_modules
 .next
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos de desarrollo
 .vscode
 .git
-*.log
 .gitignore
 .eslintrc*
 jest.config*
 **/*.test.*
 **/*.spec.*
 
-# Archivos de desarrollo
-README.md
-CHANGELOG.md
+# Variables de entorno locales
 .env.local
 .env.development
 .env.test
@@ -22,19 +24,13 @@ Dockerfile
 docker-compose.yml
 .dockerignore
 
-# Archivos de verificación y documentación
-INFORME_VERIFICACION.md
-GUIA_VPS_HOSTINGER.md
-CHECKLIST.md
-DEPLOYMENT.md
-IMPROVEMENTS.md
-BACKEND_INTEGRATION.md
-
-# Scripts de desarrollo
-deploy.sh
-health.js
+# Documentación
+README.md
+*.md
 
 # Archivos temporales
+*.log
+*.tmp
 tests/
 coverage/
 .nyc_output/
