--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,24 +7,17 @@ services:
         NODE_ENV: production
         NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
         CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
-    ports:
-      - "3002:3000"
     restart: unless-stopped
     env_file:
       - .env.docker
     environment:
       - NODE_ENV=production
-      - PORT=3000
+      - PORT=3002
       - HOSTNAME=0.0.0.0
-    networks:
-      - app_network
+    network_mode: host
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3002/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
-
-networks:
-  app_network:
-    driver: bridge
